--- a/DBP.html
+++ b/DBP.html
@@ -35,6 +35,7 @@
     <a href="TokyoghoulP.html">TOKYOGHOUL</a>
     <a href="Deathnotep.html">DEATHNOTE</a>
     <a class="active" href="DBP.html">DRAGONBALL</a>
+    <a href="MHAP.html">MHA</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
