--- a/HxHP.html
+++ b/HxHP.html
@@ -35,6 +35,7 @@
     <a href="TokyoghoulP.html">TOKYOGHOUL</a>
     <a href="Deathnotep.html">DEATHNOTE</a>
     <a href="DBP.html">DB</a>
+    <a href="MHAP.html">MHA</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
@@ -73,6 +74,48 @@
                     <p>Sur le Trone de fer (GOT)</p>
                     <div class="appreciate-separator"></div>
                     <p>Auteur: Narutovie</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/HxH/Feitan.jpeg" alt="Feitan" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Feitan</p>
+                    <p>Brigade Fantôme</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Tark</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/HxH/gon&kiruacostume 15.29.26.JPG" alt="Gon&KIrua" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Gon & Kirua</p>
+                    <p>Costard</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/HxH/Hunterexamun 15.29.26.jpeg" alt="Examun" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Gon, Kirua, Léolio, Kurapika</p>
+                    <p>Examun sous l'ombre d'Hisoka</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: XCLEMZ</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/HxH/irumi.jpeg" alt="Irumi" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Irumi Zoldyck</p>
+                    <p>Pleine lune</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Bicravuto</p>
                 </div>
             </li>
         </ul>
