--- a/computer.html
+++ b/computer.html
@@ -49,6 +49,34 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/izuku&ochaca.jpeg" alt="Izuku" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Izuku & Ochaca</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Technique</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/mortaceluffywall.JPG" alt="Acemort" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Mort Ace</p>
+                    <div class="appreciate-separator"></div>
+                    <p> dernier instant</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img class="fdepc" src="./img/PC/Itachi&Sasuke.JPG" alt="Itachi&Sasuke" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Itachi & Sasuke</p>
