--- a/phone.html
+++ b/phone.html
@@ -29,12 +29,13 @@
   </header>
   <nav>
     <a href="NarutoP.html">NARUTO</a>
-    <a href="OnepieceP.html">ONE PIECE</a>
+    <a href="OnepieceP.html">OP</a>
     <a href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
     <a href="TokyoghoulP.html">TOKYOGHOUL</a>
     <a href="Deathnotep.html">DEATHNOTE</a>
     <a href="DBP.html">DB</a>
+    <a href="MHAP.html">MHA</a>
   </nav>
   <section class="phoneaccueil">
     <img class="phone-img" src="./img/Dragonball/Piccolo&Gohan.png" alt="Piccolo&Gohan">
