--- a/phone.html
+++ b/phone.html
@@ -39,7 +39,7 @@
   </nav>
   <section class="phoneaccueil">
     <img class="phone-img" src="./img/Dragonball/Piccolo&Gohan.png" alt="Piccolo&Gohan">
-    <a href="./MHAP.html" class="gotodbz">Voir Wallpaper MHA</a>
+    <a href="./DBP.html" class="gotodbz">Voir Wallpaper DRAGONBALL</a>
     <h1>Choisissez un manga ci-dessus, et trouvez votre bonheur!</h1>
     <p>Une selection de plus de 200 fonds d'écrans pour téléphone n'attend que vous. Venez les découvrir.</p>
   </section>
